--- a/examples/state_prep_examples.ipynb
+++ b/examples/state_prep_examples.ipynb
@@ -11,20 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-29 12:19:17.993501: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-08-29 17:43:50.085407: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-29 12:19:18.266371: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-08-29 12:19:18.266399: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-08-29 12:19:19.548700: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-08-29 12:19:19.548849: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-08-29 12:19:19.548863: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-08-29 17:43:51.705528: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-08-29 17:43:51.705656: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-08-29 17:43:55.420319: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-08-29 17:43:55.420547: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-08-29 17:43:55.420565: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
       "/home/mohsin/programs/miniconda3/envs/spy/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,22 +113,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  5.01it/s]\n"
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6/6 [00:02<00:00,  2.32it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overlap to target mps from constructed circuit = 0.9315323728220736\n",
-      "overlap from static seq. preparation = 0.93153236, n_gates=528, n_2qg=172\n"
+      "overlap to target mps from constructed circuit = 0.9315328994866521\n",
+      "overlap from static seq. preparation = 0.93153290, n_gates=528, n_2qg=172\n"
      ]
     }
    ],
@@ -136,6 +143,27 @@
     "prep = MPSPreparation(target_mps)\n",
     "number_of_layers = 6\n",
     "prep.seq_preparation(number_of_layers, do_compression=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "528"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circ = prep.seq_data['circ']\n",
+    "circ.size()"
    ]
   },
   {
@@ -149,28 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  7.67it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00,  5.22it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overlap to target mps from constructed circuit = 0.8442918481555098\n",
+      "overlap to target mps from constructed circuit = 0.8442918481555088\n",
       "overlap from static seq. preparation = 0.84429185, n_gates=162, n_2qg=50\n",
       "\n",
       "now doing variational optimization over gates\n"
@@ -180,7 +201,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-0.958112359047 [best: -0.997993111610] : : 214it [09:23,  2.63s/it]                       \n"
+      "/home/mohsin/programs/miniconda3/envs/spy/lib/python3.10/site-packages/quimb/tensor/circuit.py:1203: FutureWarning: In future the tensor network returned by ``circ.uni`` will not be transposed as it is currently, to match the expectation from ``U = circ.uni.to_dense()`` behaving like ``U @ psi``. You can retain this behaviour with ``circ.get_uni(transposed=True)``.\n",
+      "  warnings.warn(\n",
+      "2023-08-29 17:48:40.414769: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:267] failed call to cuInit: CUDA_ERROR_UNKNOWN: unknown error\n",
+      "2023-08-29 17:48:40.414859: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: p52s\n",
+      "2023-08-29 17:48:40.414870: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: p52s\n",
+      "2023-08-29 17:48:40.417700: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:200] libcuda reported version is: 535.86.5\n",
+      "2023-08-29 17:48:40.417766: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:204] kernel reported version is: 535.86.5\n",
+      "2023-08-29 17:48:40.417776: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:310] kernel version seems to match DSO: 535.86.5\n",
+      "2023-08-29 17:48:40.421928: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "  0%|          | 0/160 [00:09<?, ?it/s]\n"
      ]
     },
     {
@@ -188,8 +219,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "overlap to target mps from constructed circuit =  0.997993629017276\n",
-      "overllap after variational optimization = 0.99799311,  n_gates=162, n_2qg=50\n"
+      "overlap to target mps from constructed circuit =  0.8442918149117014\n",
+      "overllap after variational optimization = -inf,  n_gates=162, n_2qg=50\n"
      ]
     }
    ],
