--- a/examples/state_prep_examples.ipynb
+++ b/examples/state_prep_examples.ipynb
@@ -24,7 +24,7 @@
     "from qsp.misc_states import make_aklt_mps\n",
     "from qsp.misc_states import make_aklt_peps\n",
     "from qsp.tsp import MPSPreparation, PEPSPreparation\n",
-    "from qsp.tsp_helper_routines import make_splitted_mps\n"
+    "from qsp.tsp_helper_routines import make_splitted_mps"
    ]
   },
   {
@@ -40,26 +40,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mps_type = 'aklt'#'random'#'N2'#'P4'#'heisenberg'#\n",
+    "mps_type = \"aklt\"  #'random'#'N2'#'P4'#'heisenberg'#\n",
     "\n",
-    "if mps_type == 'aklt':\n",
+    "if mps_type == \"aklt\":\n",
     "    tensor_array, _ = make_aklt_mps(L=6)\n",
     "    tensor_array = make_splitted_mps(tensor_array)\n",
-    "    target_mps = qtn.MatrixProductState(tensor_array, shape='lrp')\n",
+    "    target_mps = qtn.MatrixProductState(tensor_array, shape=\"lrp\")\n",
     "\n",
     "\n",
-    "if mps_type == 'random':\n",
+    "if mps_type == \"random\":\n",
     "    target_mps = qtn.MPS_rand_state(L=12, bond_dim=4)\n",
-    "    target_mps.permute_arrays(shape='lrp')\n",
-    "    \n",
-    "    \n",
-    "if mps_type in ['P4','N2','heisenberg']:\n",
-    "    filenames = {'P4': 'data/P4_6-31G_dist2.0000.pkl',              # \n",
-    "                    'N2': 'data/N2_STO-6G_dist2.0000.pkl',\n",
-    "                    'heisenberg':'data/heisenberg_L32_dist0.8000.pkl'}\n",
-    "    with open(filenames[mps_type], 'rb') as f:\n",
+    "    target_mps.permute_arrays(shape=\"lrp\")\n",
+    "\n",
+    "\n",
+    "if mps_type in [\"P4\", \"N2\", \"heisenberg\"]:\n",
+    "    filenames = {\n",
+    "        \"P4\": \"data/P4_6-31G_dist2.0000.pkl\",  #\n",
+    "        \"N2\": \"data/N2_STO-6G_dist2.0000.pkl\",\n",
+    "        \"heisenberg\": \"data/heisenberg_L32_dist0.8000.pkl\",\n",
+    "    }\n",
+    "    with open(filenames[mps_type], \"rb\") as f:\n",
     "        data = pkl.load(f)\n",
-    "    target_mps = data['quimb_mps']"
+    "    target_mps = data[\"quimb_mps\"]"
    ]
   },
   {
@@ -138,7 +140,7 @@
     }
    ],
    "source": [
-    "circ = prep.seq_data['circ']\n",
+    "circ = prep.seq_data[\"circ\"]\n",
     "circ.size()"
    ]
   },
@@ -199,7 +201,9 @@
     "prep = MPSPreparation(target_mps)\n",
     "number_of_layers = 2\n",
     "n_iter, nhop = 150, 4\n",
-    "prep.sequential_unitary_circuit_optimization(number_of_layers, do_compression=False, n_iter=n_iter, nhop=nhop)"
+    "prep.sequential_unitary_circuit_optimization(\n",
+    "    number_of_layers, do_compression=False, n_iter=n_iter, nhop=nhop\n",
+    ")"
    ]
   },
   {
@@ -245,7 +249,10 @@
    "source": [
     "prep = MPSPreparation(target_mps)\n",
     "depth = 8\n",
-    "n_iter, nhop = 150, 4,\n",
+    "n_iter, nhop = (\n",
+    "    150,\n",
+    "    4,\n",
+    ")\n",
     "prep.quantum_circuit_tensor_network_ansatz(depth, n_iter=n_iter, nhop=nhop)"
    ]
   },
@@ -342,7 +349,9 @@
     "prep = MPSPreparation(target_mps)\n",
     "number_of_lcu_layers = 4\n",
     "max_iterations = 400\n",
-    "prep.lcu_unitary_circuit_optimization(number_of_lcu_layers, max_iterations, verbose=False)"
+    "prep.lcu_unitary_circuit_optimization(\n",
+    "    number_of_lcu_layers, max_iterations, verbose=False\n",
+    ")"
    ]
   },
   {
@@ -388,7 +397,7 @@
    "source": [
     "target_mps = qtn.MPS_rand_state(L=6, bond_dim=2)\n",
     "prep = MPSPreparation(target_mps)\n",
-    "Tmax, tau = 8, 0.04 #total runtime, trotter step size\n",
+    "Tmax, tau = 8, 0.04  # total runtime, trotter step size\n",
     "max_bond = 2\n",
     "prep.adiabatic_state_preparation(Tmax, tau, max_bond, verbose=False)"
    ]
@@ -420,10 +429,14 @@
     }
    ],
    "source": [
-    "plt.plot(prep.adiabatic_data['target_fidelity'].keys(), prep.adiabatic_data['target_fidelity'].values(), '.-')\n",
-    "plt.title('1d aklt')\n",
-    "plt.xlabel('time')\n",
-    "plt.ylabel('current fidelity')"
+    "plt.plot(\n",
+    "    prep.adiabatic_data[\"target_fidelity\"].keys(),\n",
+    "    prep.adiabatic_data[\"target_fidelity\"].values(),\n",
+    "    \".-\",\n",
+    ")\n",
+    "plt.title(\"1d aklt\")\n",
+    "plt.xlabel(\"time\")\n",
+    "plt.ylabel(\"current fidelity\")"
    ]
   },
   {
@@ -458,8 +471,8 @@
    ],
    "source": [
     "tensor_array, _ = make_aklt_mps(L=6)\n",
-    "prep = MPSPreparation(tensor_array, shape='lrp')\n",
-    "Tmax, tau = 8, 0.04 # total runtime, trotter step size\n",
+    "prep = MPSPreparation(tensor_array, shape=\"lrp\")\n",
+    "Tmax, tau = 8, 0.04  # total runtime, trotter step size\n",
     "max_bond = 2\n",
     "prep.adiabatic_state_preparation(Tmax, tau, max_bond, verbose=False)"
    ]
@@ -549,10 +562,14 @@
     }
    ],
    "source": [
-    "plt.plot(prep.adiabatic_data['target_fidelity'].keys(), prep.adiabatic_data['target_fidelity'].values(), '.-')\n",
-    "plt.title('2d aklt')\n",
-    "plt.xlabel('time')\n",
-    "plt.ylabel('current fidelity')"
+    "plt.plot(\n",
+    "    prep.adiabatic_data[\"target_fidelity\"].keys(),\n",
+    "    prep.adiabatic_data[\"target_fidelity\"].values(),\n",
+    "    \".-\",\n",
+    ")\n",
+    "plt.title(\"2d aklt\")\n",
+    "plt.xlabel(\"time\")\n",
+    "plt.ylabel(\"current fidelity\")"
    ]
   }
  ],
