--- a/examples/state_prep_examples.ipynb
+++ b/examples/state_prep_examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,32 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mps_type = \"aklt\"  #'random'#'N2'#'P4'#'heisenberg'#\n",
+    "def get_target_mps(mps_type):\n",
     "\n",
-    "if mps_type == \"aklt\":\n",
-    "    tensor_array, _ = make_aklt_mps(L=6)\n",
-    "    tensor_array = make_splitted_mps(tensor_array)\n",
-    "    target_mps = qtn.MatrixProductState(tensor_array, shape=\"lrp\")\n",
+    "    if mps_type == \"aklt\":\n",
+    "        tensor_array, _ = make_aklt_mps(L=12)\n",
+    "        tensor_array = make_splitted_mps(tensor_array)\n",
+    "        target_mps = qtn.MatrixProductState(tensor_array, shape=\"lrp\")\n",
     "\n",
+    "    if mps_type == \"random\":\n",
+    "        target_mps = qtn.MPS_rand_state(L=12, bond_dim=4)\n",
+    "        target_mps.permute_arrays(shape=\"lrp\")\n",
     "\n",
-    "if mps_type == \"random\":\n",
-    "    target_mps = qtn.MPS_rand_state(L=12, bond_dim=4)\n",
-    "    target_mps.permute_arrays(shape=\"lrp\")\n",
+    "    if mps_type in [\"P4\", \"N2\", \"heisenberg\"]:\n",
+    "        filenames = {\n",
+    "            \"P4\": \"data/P4_6-31G_dist2.0000.pkl\",\n",
+    "            \"N2\": \"data/N2_STO-6G_dist2.0000.pkl\",\n",
+    "            \"heisenberg\": \"data/heisenberg_L32_dist0.8000.pkl\",\n",
+    "        }\n",
+    "        with open(filenames[mps_type], \"rb\") as f:\n",
+    "            data = pkl.load(f)\n",
+    "        target_mps = data[\"quimb_mps\"]\n",
     "\n",
-    "\n",
-    "if mps_type in [\"P4\", \"N2\", \"heisenberg\"]:\n",
-    "    filenames = {\n",
-    "        \"P4\": \"data/P4_6-31G_dist2.0000.pkl\",  #\n",
-    "        \"N2\": \"data/N2_STO-6G_dist2.0000.pkl\",\n",
-    "        \"heisenberg\": \"data/heisenberg_L32_dist0.8000.pkl\",\n",
-    "    }\n",
-    "    with open(filenames[mps_type], \"rb\") as f:\n",
-    "        data = pkl.load(f)\n",
-    "    target_mps = data[\"quimb_mps\"]"
+    "    return target_mps"
    ]
   },
   {
@@ -90,57 +90,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preparing mps using sequential unitaries...\n"
+      "preparing mps using sequential unitaries (num_seq_layers=6)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  4.48it/s]\n"
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6/6 [00:16<00:00,  2.69s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overlap from static seq. preparation = 0.94397781 (from circ 0.94397782),\n",
-      "n_gates=477, n_2qg=155\n",
+      "overlap from static seq. preparation = 0.75873580,\n",
+      "n_gates=1143, n_2qg=373\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "target_mps = get_target_mps(mps_type='aklt')\n",
     "prep = MPSPreparation(target_mps)\n",
-    "number_of_layers = 6\n",
-    "prep.sequential_unitary_circuit(number_of_layers, do_compression=False)"
+    "num_seq_layers = 6\n",
+    "seq_data = prep.sequential_unitary_circuit(num_seq_layers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "477"
+       "1143"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circ = prep.seq_data[\"circ\"]\n",
+    "circ = seq_data[\"circ\"]\n",
     "circ.size()"
    ]
   },
@@ -155,55 +163,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doing variational optimization over sequential unitaries...\n"
+      "doing variational optimization over sequential unitaries (num_var_seq_layers=2)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  6.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of variational params in the circuit (from sequential algorithm) are 447\n",
-      "overlap before variational optimization = -0.8945434690\n"
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-0.999977111816 [best: -0.999977111816] : : 792it [20:39,  1.57s/it]                       \n"
+      "100%|██████████| 2/2 [00:00<00:00,  3.49it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overllap after variational optimization = 0.99997711 (from circ 0.99995225),\n",
-      "n_gates=168, n_2qg=52\n",
+      "number of variational params in the circuit (from sequential algorithm) are 939\n",
+      "overlap before variational optimization = -0.6592717767\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-0.154138788581 [best: -0.842006504536] : : 19it [02:13,  7.02s/it]                    \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after variational optimization = 0.84200650,\n",
+      "n_gates=354, n_2qg=110\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'tnopt': <TNOptimizer(d=939, backend=tensorflow)>,\n",
+       " 'optimized_unitary': TensorNetworkGenOperator(tensors=533, indices=667),\n",
+       " 'circ': <qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f3577ffd8d0>,\n",
+       " 'overlap_from_seq_circ': None}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "target_mps = get_target_mps(mps_type='aklt')\n",
     "prep = MPSPreparation(target_mps)\n",
-    "number_of_layers = 2\n",
-    "n_iter, nhop = 150, 4\n",
-    "prep.sequential_unitary_circuit_optimization(\n",
-    "    number_of_layers, do_compression=False, n_iter=n_iter, nhop=nhop\n",
-    ")"
+    "num_var_seq_layers = 2\n",
+    "var_seq_data = prep.sequential_unitary_circuit_optimization(num_var_seq_layers, max_iterations=4)"
    ]
   },
   {
@@ -217,43 +243,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preparing mps using quantum circuit tensor network ansatz...\n",
-      "number of variational params in the circuit (from QCTN) are 588\n",
-      "overlap before variational optimization = -0.0110414047\n"
+      "preparing mps using quantum circuit tensor network ansatz (qctn_depth=8)...\n",
+      "number of variational params in the circuit (from QCTN) are 1200\n",
+      "overlap before variational optimization = -0.0000750047\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-0.996865570545 [best: -0.999882161617] : : 824it [25:55,  1.89s/it]                       \n"
+      "-0.009121494368 [best: -0.009121494368] : : 14it [01:21,  5.81s/it]                    \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overllap after qctn optimization =0.99988216 (from circ 0.99988257),\n",
-      "n_gates=196, n_2qg=88\n",
+      "overllap after qctn optimization =0.00912149,\n",
+      "n_gates=400, n_2qg=184\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "target_mps = get_target_mps(mps_type='aklt')\n",
     "prep = MPSPreparation(target_mps)\n",
-    "depth = 8\n",
-    "n_iter, nhop = (\n",
-    "    150,\n",
-    "    4,\n",
-    ")\n",
-    "prep.quantum_circuit_tensor_network_ansatz(depth, n_iter=n_iter, nhop=nhop)"
+    "qctn_depth = 8\n",
+    "qctn_data = prep.quantum_circuit_tensor_network_ansatz(qctn_depth, max_iterations=4)"
    ]
   },
   {
@@ -275,36 +298,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preparing mps as linear combination of unitaries (LCU)...\n"
+      "preparing mps as linear combination of unitaries (num_lcu_layers=4)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00,  6.30it/s]\n"
+      "100%|██████████| 4/4 [00:09<00:00,  2.48s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overllap after lcu. preparation = 0.87750923 (from circ 0.87750923),  n_gates=2998, n_2qg=1250\n",
+      "overllap after lcu. preparation = 0.84256240,  n_gates=3002, n_2qg=1242\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "target_mps = get_target_mps(mps_type='N2')\n",
     "prep = MPSPreparation(target_mps)\n",
-    "number_of_lcu_layers = 4\n",
-    "prep.lcu_unitary_circuit(number_of_lcu_layers, verbose=False)"
+    "num_lcu_layers = 4\n",
+    "lcu_data = prep.lcu_unitary_circuit(num_lcu_layers)"
    ]
   },
   {
@@ -318,40 +342,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doing variational optimization over linear combination of unitaries...\n"
+      "doing variational optimization over linear combination of unitaries (num_var_lcu_layers=4)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00,  5.73it/s]\n"
+      "100%|██████████| 4/4 [00:07<00:00,  1.97s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overlap before lcu optimization = 0.8775092329  (from circ 0.87750923), n_gates=3079, n_2qg=1284\n",
-      "overllap after lcu optimization (manopt) = 0.97393487\n",
+      "overlap before lcu optimization = 0.8425623986 , n_gates=3052, n_2qg=1262\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [01:03<00:00, 15.97s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "final overlap (after 4 iters):  -0.84247412348052764\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after lcu optimization (qgopt) = 0.84238025\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "prep = MPSPreparation(target_mps)\n",
-    "number_of_lcu_layers = 4\n",
-    "max_iterations = 400\n",
-    "prep.lcu_unitary_circuit_optimization(\n",
-    "    number_of_lcu_layers, max_iterations, verbose=False\n",
-    ")"
+    "target_mps = get_target_mps(mps_type='N2')\n",
+    "num_var_lcu_layers = 4\n",
+    "data_var_lcu = prep.lcu_unitary_circuit_optimization(num_var_lcu_layers, max_iterations=4)"
    ]
   },
   {
@@ -365,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +421,7 @@
      "output_type": "stream",
      "text": [
       "adiabatic state preparation of mps:\n",
-      "runtime=8, tau=0.04, steps=200, max_bond=2\n",
+      "runtime=8, tau=0.04, steps=200, max_bond_dim=2\n",
       "given mps is not injective. blocking it now ...\n"
      ]
     },
@@ -381,14 +429,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 201/201 [00:14<00:00, 13.97it/s]\n"
+      "100%|██████████| 201/201 [00:22<00:00,  8.76it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final overlap @ s=1.00000 is e=0.00000000, curr_f=0.99710085, target_fidelity=0.99710085\n",
+      "final overlap @ s=1.00000 is e=0.00000000, curr_f=0.99833848, target_fidelity=0.99833848\n",
       "approximate n_gates=213060, and n_2qg=80400\n",
       "\n"
      ]
@@ -397,9 +445,9 @@
    "source": [
     "target_mps = qtn.MPS_rand_state(L=6, bond_dim=2)\n",
     "prep = MPSPreparation(target_mps)\n",
-    "Tmax, tau = 8, 0.04  # total runtime, trotter step size\n",
+    "runtime, tau = 8, 0.04  # total runtime, trotter step size\n",
     "max_bond = 2\n",
-    "prep.adiabatic_state_preparation(Tmax, tau, max_bond, verbose=False)"
+    "adiabatic_data = prep.adiabatic_state_preparation(runtime, tau, max_bond, verbose=False)"
    ]
   },
   {
@@ -429,11 +477,7 @@
     }
    ],
    "source": [
-    "plt.plot(\n",
-    "    prep.adiabatic_data[\"target_fidelity\"].keys(),\n",
-    "    prep.adiabatic_data[\"target_fidelity\"].values(),\n",
-    "    \".-\",\n",
-    ")\n",
+    "plt.plot(adiabatic_data[\"target_fidelity\"].keys(), adiabatic_data[\"target_fidelity\"].values(), \".-\")\n",
     "plt.title(\"1d aklt\")\n",
     "plt.xlabel(\"time\")\n",
     "plt.ylabel(\"current fidelity\")"
