--- a/examples/benchmarks.ipynb
+++ b/examples/benchmarks.ipynb
@@ -677,7 +677,117 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 2/3 [00:07<00:04,  4.06s/it]"
+      "100%|██████████| 3/3 [00:24<00:00,  8.13s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of variational params in the circuit (from sequential algorithm) are 2013\n",
+      "overlap before variational optimization = -0.6894623637\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-0.010681507178 [best: -0.717390298843] : : 17it [03:19, 11.75s/it]                    \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after variational optimization = 0.71739030,\n",
+      "n_gates=755, n_2qg=241\n",
+      "\n",
+      "preparing mps using quantum circuit tensor network ansatz (qctn_depth=2)...\n",
+      "number of variational params in the circuit (from QCTN) are 474\n",
+      "overlap before variational optimization = -0.0000000041\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-0.000000013275 [best: -0.000000013275] :  50%|█████     | 2/4 [00:02<00:02,  1.35s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after qctn optimization =0.00000001,\n",
+      "n_gates=158, n_2qg=62\n",
+      "\n",
+      "preparing mps using quantum circuit tensor network ansatz (qctn_depth=3)...\n",
+      "number of variational params in the circuit (from QCTN) are 663\n",
+      "overlap before variational optimization = -0.0000009453\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-0.000000420314 [best: -0.000000945280] :  50%|█████     | 2/4 [00:03<00:03,  1.88s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after qctn optimization =0.00000095,\n",
+      "n_gates=221, n_2qg=93\n",
+      "\n",
+      "preparing mps as linear combination of unitaries (num_lcu_layers=4)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:01<00:00,  2.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overllap after lcu. preparation = 0.76810639,  n_gates=8596, n_2qg=3586\n",
+      "\n",
+      "doing variational optimization over linear combination of unitaries (num_var_lcu_layers=2)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  2.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overlap before lcu optimization = 0.7278146666 , n_gates=4239, n_2qg=1764\n",
+      "overllap after lcu optimization (manopt) = 0.76513800\n",
+      "\n",
+      "doing variational optimization over linear combination of unitaries (num_var_lcu_layers=4)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:02<00:00,  1.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overlap before lcu optimization = 0.7681063982 , n_gates=8551, n_2qg=3566\n"
      ]
     }
    ],
