--- a/examples/state_prep_examples.ipynb
+++ b/examples/state_prep_examples.ipynb
@@ -41,7 +41,6 @@
    "outputs": [],
    "source": [
     "def get_target_mps(mps_type):\n",
-    "\n",
     "    if mps_type == \"aklt\":\n",
     "        tensor_array, _ = make_aklt_mps(L=12)\n",
     "        tensor_array = make_splitted_mps(tensor_array)\n",
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/6 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6/6 [00:16<00:00,  2.69s/it]\n"
+      "100%|██████████| 6/6 [00:11<00:00,  1.90s/it]\n"
      ]
     },
     {
@@ -128,28 +120,27 @@
     "target_mps = get_target_mps(mps_type='aklt')\n",
     "prep = MPSPreparation(target_mps)\n",
     "num_seq_layers = 6\n",
-    "seq_data = prep.sequential_unitary_circuit(num_seq_layers)"
+    "overlap, circ = prep.sequential_unitary_circuit(num_seq_layers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1143"
+       "(1143, 373)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circ = seq_data[\"circ\"]\n",
-    "circ.size()"
+    "circ.size(), circ.num_nonlocal_gates()"
    ]
   },
   {
@@ -229,7 +220,7 @@
     "target_mps = get_target_mps(mps_type='aklt')\n",
     "prep = MPSPreparation(target_mps)\n",
     "num_var_seq_layers = 2\n",
-    "var_seq_data = prep.sequential_unitary_circuit_optimization(num_var_seq_layers, max_iterations=4)"
+    "overlap, circ = prep.sequential_unitary_circuit_optimization(num_var_seq_layers, max_iterations=4)"
    ]
   },
   {
